@@ -164,6 +164,29 @@ class tx_seminars_registrationmanager extends tx_seminars_dbplugin {
 	}
 
 	/**
+	 * Calculates the total price for a registration.
+	 * If a special price is available for this event, no total price will
+	 * be calculated.
+	 *
+	 * @param	integer		the number of seats to book
+	 * @param	object		a seminar object from which we will get the price (may be null)
+	 *
+	 * @return	string		the total price for this attendance or 0.00 if no total price can be calculated
+	 *
+	 * @access	public
+	 */
+	function calculateTotalPrice($seats, &$seminar) {
+		if ($seminar->hasPriceSpecial()) {
+			$totalPrice = '0.00';
+		} else {
+			$eventPrice = $seminar->getCurrentPriceRegular();
+			$totalPrice = $eventPrice * $seats;
+		}
+
+		return $totalPrice;
+	}
+
+	/**
 	 * Checks whether a seminar UID is valid,
 	 * ie. a non-deleted and non-hidden seminar with the given number exists.
 	 *
@@ -313,7 +336,7 @@ class tx_seminars_registrationmanager extends tx_seminars_dbplugin {
 	 * Creates a registration to $this->registration, writes it to DB,
 	 * and notifies the organizer and the user (both via e-mail).
 	 *
-	 * The additinal notifications will only be sent if this is enabled in the TypoScript setup (which is the default).
+	 * The additional notifications will only be sent if this is enabled in the TypoScript setup (which is the default).
 	 *
 	 * @param	object		the seminar object (that's the seminar we would like to register for), must not be null
 	 * @param	array		associative array with the registration data the user has just entered
@@ -322,6 +345,15 @@ class tx_seminars_registrationmanager extends tx_seminars_dbplugin {
 	 * @access	public
 	 */
 	function createRegistration(&$seminar, $registrationData, &$plugin) {
+		// Add the total price to the array that contains all neccessary
+		// informations before creating the registration object.
+		if (isset($registrationData['seats']) && ($registrationData['seats'] > 0)) {
+			$seats = $registrationData['seats'];
+		} else {
+			$seats = 1;
+		}
+		$registrationData['total_price'] = $this->calculateTotalPrice($seats, $seminar);
+
 		$registrationClassname = t3lib_div::makeInstanceClassName('tx_seminars_registration');
 		$this->registration =& new $registrationClassname($plugin->cObj);
 		$this->registration->setRegistrationData($seminar, $this->getFeUserUid(), $registrationData);
