@@ -150,6 +150,7 @@ CREATE TABLE tx_seminars_attendances (
 	user int(11) unsigned DEFAULT '0' NOT NULL,
 	seminar int(11) unsigned DEFAULT '0' NOT NULL,
 	price text NOT NULL,
+	total_price decimal(7,2) DEFAULT '0.00' NOT NULL,
 	paid tinyint(3) unsigned DEFAULT '0' NOT NULL,
 	datepaid int(11) DEFAULT '0' NOT NULL,
 	method_of_payment int(11) unsigned DEFAULT '0' NOT NULL,
