@@ -88,6 +88,7 @@
 			<label index="label_price_special">Special price</label>
 			<label index="label_price_earlybird_regular">Early-bird price</label>
 			<label index="label_price_earlybird_special">Early-bird special price</label>
+			<label index="label_total_price">Total price</label>
 			<label index="label_paymentmethods">Available methods of payment</label>
 			<label index="label_event_type">Event type</label>
 			<label index="label_organizers">Organizers</label>
@@ -311,6 +312,7 @@
 			<label index="label_price_special">Spezialpreis</label>
 			<label index="label_price_earlybird_regular">Frühbucherpreis</label>
 			<label index="label_price_earlybird_special">Frühbucher-Spezialpreis</label>
+			<label index="label_total_price">Gesamtpreis</label>
 			<label index="label_paymentmethods">Mögliche Zahlungsarten</label>
 			<label index="label_event_type">Veranstaltungsart</label>
 			<label index="label_organizers">Veranstalter</label>
@@ -667,6 +669,7 @@
 			<label index="label_price_special" type="integer">35819210</label>
 			<label index="label_price_earlybird_regular" type="integer">236870027</label>
 			<label index="label_price_earlybird_special" type="integer">255242535</label>
+			<label index="label_total_price" type="integer">15654485</label>
 			<label index="label_paymentmethods" type="integer">119552142</label>
 			<label index="label_event_type" type="integer">99114704</label>
 			<label index="label_organizers" type="integer">68798680</label>
@@ -948,6 +951,7 @@
 			<label index="label_price_special">Special price</label>
 			<label index="label_price_earlybird_regular">Early-bird price</label>
 			<label index="label_price_earlybird_special">Early-bird special price</label>
+			<label index="label_total_price">Total price</label>
 			<label index="label_paymentmethods">Available methods of payment</label>
 			<label index="label_event_type">Event type</label>
 			<label index="label_organizers">Organizers</label>
