@@ -36,7 +36,10 @@
 <!-- ###FIELD_WRAPPER_PRICE_REGULAR### --><!-- ###FIELD_WRAPPER_PRICE_SPECIAL### -->[###LABEL_PRICE_SPECIAL###]
 ###PRICE_SPECIAL###
 
-<!-- ###FIELD_WRAPPER_PRICE_SPECIAL### --><!-- ###FIELD_WRAPPER_PAYMENTMETHOD### -->[###LABEL_PAYMENTMETHOD###]
+<!-- ###FIELD_WRAPPER_PRICE_SPECIAL### --><!-- ###FIELD_WRAPPER_TOTAL_PRICE### -->[###LABEL_TOTAL_PRICE###]
+###TOTAL_PRICE###
+
+<!-- ###FIELD_WRAPPER_TOTAL_PRICE### --><!-- ###FIELD_WRAPPER_PAYMENTMETHOD### -->[###LABEL_PAYMENTMETHOD###]
 ###PAYMENTMETHOD###<!-- ###FIELD_WRAPPER_PAYMENTMETHOD### --><!-- ###FIELD_WRAPPER_BILLING_ADDRESS### -->[###LABEL_BILLING_ADDRESS###]
 ###BILLING_ADDRESS###
 <!-- ###FIELD_WRAPPER_BILLING_ADDRESS### --><!-- ###FIELD_WRAPPER_URL### -->[###LABEL_URL###]
